# CodeGuardian-AI

./: .bootstrap-state.json  .gitignore  .terraform-docs.yml  Makefile  NOTES.txt  README.md  RUNME.py  docker-compose.yml
.github/workflows/: build-deploy.yml  security-scan.yml  terraform-docs.yml  terraform.yml
app/admin-ui/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/admin-ui/app/: globals.css  layout.tsx  page.tsx
app/admin-ui/components/: Sidebar.tsx
app/admin-ui/lib/: gateway.ts
app/admin-ui/public/: .gitkeep
app/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/backend/src/: __init__.py  main.py
app/backend/src/api/: admin.py  routes.py  schemas.py
app/backend/src/auth/: __init__.py  budget.py  dependencies.py  keystore.py  models.py  ratelimit.py
app/backend/src/core/: config.py  prompts.py
app/backend/src/middleware/: __init__.py  cache.py  embeddings.py  guardrails.py
app/backend/src/observability/: __init__.py  metrics.py  tracing.py
app/backend/src/providers/: __init__.py  base.py  bedrock.py  openai.py  pricing.py  registry.py
app/backend/src/routing/: policies.py  router.py
app/backend/src/services/: analyzer.py  bedrock.py
app/backend/src/usage/: __init__.py  db.py  models.py  repository.py
app/backend/tests/: conftest.py  test_analyze.py  test_api.py  test_auth.py  test_budget.py  test_health.py  test_metrics.py  test_middleware.py  test_routing.py  test_schemas.py  test_semantic_cache.py  test_streaming.py  test_usage.py
app/frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/frontend/src/: app.py
app/frontend/src/components/: results.py
app/helm-chart/admin-ui/: Chart.yaml  values.yaml
app/helm-chart/backend/: Chart.yaml  values-dev.yaml  values.yaml
argocd/: root-app.yaml
argocd/dashboards/: codeguardian-app-dashboard.yaml  llm-gateway-dashboard.yaml
argocd/projects/: applications.yaml  platform.yaml
docker/: otel-collector.yaml
docs/: Build-Order.md  POSTMORTEM.md  Project-Plan.md  k8s-golden.md
terraform/: .terraform.lock.hcl  data.tf  locals.tf  main-caller.tf  outputs.tf  security-groups.tf  variables.tf  versions.tf
terraform/environments/: dev.tfvars  prod.tfvars
(+64 files in other folders)
